Sat Sep 12 17:55:18 BST  2015  Lee Noar  <leenoar@sky.com>

	* stdlib/atexit.c: Make SCL friendly when building for SCL.
	For UnixLib nothing has changed. For SCL, don't compile
	anything related to pthreads. Don't compile atexit as SCL
	already provides that. Maintain our own destructor list
	separate from atexit and use the SCL atexit to ensure all
	destructors are called on program exit.
	* Makefile.am: Add stdlib/atexit.c to the SCL build.

Sat Sep 05 14:08:48 BST  2015  Lee Noar  <leenoar@sky.com>

	Fix for bug 246 - memory leak in RMA.

	* module/sul.s(sul_exit): Free the CLI memory regardless of
	whether there is a parent.
	Bump version number to 1.14.

Sun Jun 28 15:12:13 BST  2015  Lee Noar  <leenoar@sky.com>

	Submitted by Jeffrey Lee <me@phlamethrower.co.uk>

	* signal/_signal.s: Change VFP exception error base to match
	the value that's now being used by RISC OS (changed in OS
	to avoid potential clash with ROL allocation).

Sat May 16 21:07:57 BST  2015  Lee Noar  <leenoar@sky.com>

	* unix/ul_select.c(select): Only report a file descriptor
	as bad if it was given in one of the sets.

Sun Apr 19 17:57:09 BST  2015  Lee Noar  <leenoar@sky.com>

	* include/features.h(__stack_size): Declare new weak symbol.
	* sys/_syslib.s: Allow the size of the initial stack chunk
	to be set by defining the variable __stack_size in the client
	program. This can be used to mimic a flat stack when a chunked
	stack may be a problem, for example, in javascript interpreters.
	If __stack_size is not defined, then the initial stack chunk
	size is 4096 bytes as normal.

Sun Apr 19 17:40:12 BST  2015  Lee Noar  <leenoar@sky.com>

	* stdlib/atexit.c: It seems that __cxa_finalize can be called
	recursively, so removing entries from the list as we step
	through it is not a good idea. When returning from a recursive
	call, our next entry may no longer exist. Instead, just mark
	the entries as finished without removing them. As __cxa_finalize