@@ -1,3 +1,12 @@
+Mon Nov 23 17:12:58 GMT  2015  Lee Noar  <leenoar@sky.com>
+
+	* include/setjmp.h: Fix for memory corruption when mixing
+	VFP and non-VFP shared libraries at runtime. If a VFP program
+	uses a non-VFP library that calls setjmp, the setjmp buffer
+	will be too small and setjmp() will overwrite anything that
+	follows it.
+	Fix by making the buffer for setjmp the same size for both.
+
 Sat Sep 12 17:55:18 BST  2015  Lee Noar  <leenoar@sky.com>
 
 	* stdlib/atexit.c: Make SCL friendly when building for SCL.
